Add background image to each div

--- a/Expanding Cards/index.html
+++ b/Expanding Cards/index.html
@@ -11,24 +11,24 @@
 <body>
     <div class="container">
 
-        <div class="panel active">
-            <h3>Explore the World</h3>
+        <div class="panel active" style="background-image: url('images/quino-al-mBQIfKlvowM-unsplash.jpg');">
+            <h3>Pink Beach</h3>
         </div>
 
-        <div class="panel">
-            <h3></h3>
+        <div class="panel" style="background-image: url('images/kalen-emsley-Bkci_8qcdvQ-unsplash.jpg');">
+            <h3>Wild Forest</h3>
         </div>
 
-        <div class="panel">
-            <h3></h3>
+        <div class="panel" style="background-image: url('images/john-fowler-aaIN3y2zcMQ-unsplash.jpg');">
+            <h3>Red Moon</h3>
         </div>
 
-        <div class="panel">
-            <h3></h3>
+        <div class="panel" style="background-image: url(images/benjamin-voros-phIFdC6lA4E-unsplash.jpg);">
+            <h3>Purple Stars</h3>
         </div>
-        
-        <div class="panel">
-            <h3></h3>
+
+        <div class="panel" style="background-image: url('images/andre-benz-gofWd3XkKo0-unsplash.jpg');">
+            <h3>Sunset Grass</h3>
         </div>
     </div>
 </body>
