--- a/Drum Kit/index.html
+++ b/Drum Kit/index.html
@@ -12,39 +12,39 @@
     <div class="container">
         <div data-key="65" class="key">
             <kbd>A</kbd>
-            <span>CLAP</span>
+            <span class="sound">CLAP</span>
         </div>
         <div data-key="83" class="key">
             <kbd>S</kbd>
-            <span>HIHAT</span>
+            <span class="sound">HIHAT</span>
         </div>
         <div data-key="68" class="key">
             <kbd>D</kbd>
-            <span>KICK</span>
+            <span class="sound">KICK</span>
         </div>
         <div data-key="70" class="key">
             <kbd>F</kbd>
-            <span>OPENHAT</span>
+            <span class="sound">OPENHAT</span>
         </div>
         <div data-key="71" class="key">
             <kbd>G</kbd>
-            <span>BOOM</span>
+            <span class="sound">BOOM</span>
         </div>
         <div data-key="72" class="key">
             <kbd>H</kbd>
-            <span>RIDE</span>
+            <span class="sound">RIDE</span>
         </div>
         <div data-key="74" class="key">
             <kbd>J</kbd>
-            <span>SNARE</span>
+            <span class="sound">SNARE</span>
         </div>
         <div data-key="75" class="key">
             <kbd>K</kbd>
-            <span>TOM</span>
+            <span class="sound">TOM</span>
         </div>
         <div data-key="76" class="key">
             <kbd>L</kbd>
-            <span>TINK</span>
+            <span class="sound">TINK</span>
         </div>
     </div>
 
@@ -57,6 +57,6 @@
     <audio data-key="74" src="sounds/snare.wav"></audio>
     <audio data-key="75" src="sounds/tom.wav"></audio>
     <audio data-key="76" src="sounds/tink.wav"></audio>
-    
+
 </body>
 </html>
