--- a/Scroll Animation/index.html
+++ b/Scroll Animation/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Scroll to see the animation!</h1>
 
-    <div class="box show"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
     <div class="box"><h2>Content</h2></div>
     <div class="box"><h2>Content</h2></div>
     <div class="box"><h2>Content</h2></div>
