--- a/Split Landing Page/index.html
+++ b/Split Landing Page/index.html
@@ -9,6 +9,16 @@
     <title>Split Landing Page</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="split left">
+            <h1>Playstation 5</h1>
+            <a href="" class="btn">Buy Now</a>
+        </div>
+
+        <div class="split right">
+            <h1>XBox Series X</h1>
+            <a href="" class="btn">Buy Now</a>
+        </div>
+    </div>
 </body>
 </html>
