--- a/Split Landing Page/index.html
+++ b/Split Landing Page/index.html
@@ -12,12 +12,12 @@
     <div class="container">
         <div class="split left">
             <h1>Playstation 5</h1>
-            <a href="" class="btn">Buy Now</a>
+            <a href="https://www.playstation.com/en-ca/ps5/" class="btn" target="_blank">Buy Now</a>
         </div>
 
         <div class="split right">
             <h1>XBox Series X</h1>
-            <a href="" class="btn">Buy Now</a>
+            <a href="https://www.xbox.com/en-CA/consoles/xbox-series-x" class="btn" target="_blank">Buy Now</a>
         </div>
     </div>
 </body>
