--- a/Form Wave Animation/index.html
+++ b/Form Wave Animation/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Waving Form Input</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
             
             <div class="form-control">
                 <input type="text">
-                <label >Password</label>
+                <label>Password</label>
             </div>
 
             <button class="btn">Login</button>
