--- a/Form Wave Animation/index.html
+++ b/Form Wave Animation/index.html
@@ -13,12 +13,12 @@
         <h1>Please Login</h1>
         <form>
             <div class="form-control">
-                <input type="text">
+                <input type="email" required>
                 <label>Email</label>
             </div>
             
             <div class="form-control">
-                <input type="text">
+                <input type="password" required>
                 <label>Password</label>
             </div>
 
